--- a/content/intro.tex
+++ b/content/intro.tex
@@ -3,16 +3,16 @@
 \section{Motivation} \label{c:motiv}
 
 By winning the Imagenet Large Scale Visual Recognition Challenge in 2012, convolutional neural networks (CNNs) gained momentum \cite{NIPS2012_4824}. 
-Their powerful abstraction mechanism made them one of the most used algorithms in the fields of image and video classification and description and speech recognition \cite{abdel2014convolutional}\cite{karpathy2014large}\cite{LeCun2015}\cite{szegedy2015going}. 
+Their powerful abstraction mechanism made them one of the most used algorithms in the fields of image and video classification and description and speech recognition \cite{abdel2014convolutional, karpathy2014large, LeCun2015, szegedy2015going}. 
 This can be primarily contributed to their ability to extract high level features on spatial and/or temporal conditioned data and utilize the compositional structure in information of the world.
 
 Creating discriminative high level feature extractors allows the system to dynamically adapt to the input data and work on various kinds of data. 
 In addition, the feature extractors do not need to have any semantic, human interpretable representation and can be more complex than manually built feature extractors. 
 This also removes the labour-intensive and time consuming task of building feature extractors manually.
-Consequently, they recently got adapted to solve robotic problems like grasp planning, drone navigation and autonomous driving \cite{chen2015deepdriving}\cite{giusti2016machine}\cite{levine2016learning}. 
+Consequently, they recently got adapted to solve robotic problems like grasp planning, drone navigation and autonomous driving \cite{chen2015deepdriving, giusti2016machine, levine2016learning}. 
 
 One precursor of CNNs are the deep belief networks (DBNs), which are built up of restricted Boltzmann machines (RBMs). 
-DBNs have shown excellent performance on image classification tasks in the early 2000s \cite{hinton2006fast}\cite{lee2009convolutional}.
+DBNs have shown excellent performance on image classification tasks in the early 2000s \cite{hinton2006fast, lee2009convolutional}.
 
 Compared to classical CNNs, DBNs allow recurrent connections and can be trained unsupervised. 
 They have been described as  "probably the most biologically plausible learning algorithm for deep architectures we currently know” \cite{bengio2015towards}. 
