--- a/content/appro.tex
+++ b/content/appro.tex
@@ -53,7 +53,7 @@ The conversion approach can be roughly described in two steps:
 
 \subsection{Convolutional DBNs} \label{c:convdbns}
 
-To train a convolutional DBN we proceed similar to Hinton et al. and Lee et al. \cite{hinton2006fast}\cite{lee2009convolutional}.
+To train a convolutional DBN we proceed similar to Hinton et al. and Lee et al. \cite{hinton2006fast, lee2009convolutional}.
 
 At first the convolutional RBMs are trained greedily with CD, as described in Chapter \ref{c:convrbm}, for a certain number of iterations on data batches of batch-size $b$.
 After an RBM is trained, we convert the dataset $X$ by sampling of the hidden layer of the RBM (one forward-pass step) into a new dataset $X'$:
@@ -106,7 +106,7 @@ We present three different variations of the conversion.
 One way to convert the DBN to the spiking domain, is by interpreting it as a pre-trained CNN with purely forward connections (we do not perform any commonly used gradient descent fine tuning to get comparable results with only CD trained models, but fine tuning could further improve the performance).
 While this allows classification, it removes the generative capabilities of the network.
 
-For the conversion, we proceed similar to Cao et al. and Diehl et al. \cite{Cao2014}\cite{Diehl2015} .
+For the conversion, we proceed similar to Cao et al. and Diehl et al. \cite{Cao2014, Diehl2015}.
 They use average pooling and ReLU functions to get a similar architecture as SNNs.
 In contrast, we don't use any pooling, since for RBM there is no simple way to integrate average pooling (used by Cao et al. and Diehl et al. in their trained CNNs), and for spiking CNNs there is no simple way to integrate probabilistic max pooling, which is to our knowledge currently the only into the training integrated pooling thought of for RBMs.
 We also use the sigmoid function, since RBMs are commonly trained with sigmoid activations (but some approaches propose ReLU for RBMs as well \cite{Nair2010}).
@@ -246,7 +246,7 @@ Thus the synchronization at a time step for weight shared weights $w_i$ , $w_j$ 
 \[
 \begin{split}
 w_i(t) = w_{shared}(t-1) + \delta w_i, \\ 
-w_j(t) = w_{shared}(t-1) + \delta w_j 
+w_j(t) = w_{shared}(t-1) + \delta w_j, 
 \end{split}
 \]
 which gives the new shared weight
@@ -272,7 +272,7 @@ This removes one advantage of RBMs since the hidden units are no longer independ
 
 
 Connecting neurons to neurons on a similar position in other feature maps appears to make the features more discriminative and less correlated.
-This also poses some similarities to adding a negative structured bias to the hidden units, which has shown to result in better features \cite{DBLP:journals/corr/KheradpishehGTM16}\cite{LeCun}\cite{NorouziM2009}.
+This also poses some similarities to adding a negative structured bias to the hidden units, which has shown to result in better features \cite{DBLP:journals/corr/KheradpishehGTM16, LeCun, NorouziM2009}.
 
 An intuitive interpretation is that if one feature reacts to a certain input it will be highly active and prevent the others from being active as well and thus prevent them from learning the same features.  
 
