--- a/preface/abstract.tex
+++ b/preface/abstract.tex
@@ -18,7 +18,7 @@ By comparing both approaches it becomes apparent that by introducing lateral inh
 Die automatische Extraktion von "High-Level Features" unterstützt und erleichtert Aufgaben wie Klassifikation und Prädiktion.
 Mit Hilfe von Deep Belief Networks können solche Feature Extraktoren unüberwacht gelernt werden.
 Durch eine vielschichtige Convolutional Architektur kann die Feature Qualität auf kompositionellen Daten weiter verbessert werden und eine abstraktere Repräsentation ermöglicht werden.
-Die meisten Architekturen arbeiten, im Gegensatz zum Gehirn, in diskreten Zeitschritten und nutzen keine kontinuierliche Informationsverarbeitung, was zu schnelleren Verarbeitungszeiten und einer niedrigeren Leistungsaufnahme führen könnte.
+Die meisten Architekturen arbeiten, im Gegensatz zum Gehirn, in diskreten Zeitschritten und nutzen keine kontinuierliche Informationsverarbeitung, was zu schnel-leren Verarbeitungszeiten und einer niedrigeren Leistungsaufnahme führen könnte.
 In dieser Arbeit werden verschiedene biologisch motivierte Architekturen vorgestellt, die es ermöglichen ein Convolutional Spiking Deep Belief Network aufzubauen und zu trainieren.
 Es werden zwei verschiedene Ansätze präsentiert.
 Der erste Ansatz trainiert ein Netzwerk in diskreten Zeitschritten und wandelt danach das trainierte Netzwerk in ein Spiking Netzwerk um.
